@@ -1,10 +1,16 @@
-2008-05-23  Peter Flanigan  <pjf@localhost>
+2008-06-02
 
-	* lib/Data/CloudWeights.pm:
+	* Build.PL:
+
+	Made version a build requirement
+
+2008-05-23
+
+	* t/*pod*.t:
 
 	Added POD and POD coverage tests
 
-2008-05-19  Peter Flanigan  <pjf@localhost>
+2008-05-19
 
 	* lib/Data/CloudWeights.pm (formation):
 
